fix spacing between homepage components

--- a/src/pages/Homepage/AboutPreview/AboutPreview.scss
+++ b/src/pages/Homepage/AboutPreview/AboutPreview.scss
@@ -5,7 +5,7 @@
     @include gradientHomepage;
     font-family: $primary-font-family;
     height: 100%;
-    padding: 8em 0;
+    padding: ($space-xxl * 2) 0;
     position: relative;
 
     &__content {
@@ -51,6 +51,7 @@
     }
 
     @media (max-width: 1024px) {
+        padding: ($space-xl * 2) 0;
         &__image {
             height: 19.125em;
             width: 28.25em;
@@ -60,6 +61,7 @@
     @media (max-width: 768px) {
         font-size: 1.5rem;
         display: block;
+        padding: $space-xxl 0;
 
         &__button {
             &:last-of-type {
