--- a/src/pages/Homepage/SubscribeHomepage/SubscribeHomepage.scss
+++ b/src/pages/Homepage/SubscribeHomepage/SubscribeHomepage.scss
@@ -5,7 +5,7 @@
     @include flex-center;
     flex-direction: column;
     font-family: $primary-font-family;
-    padding: $space-xxl 0;
+    padding: $space-xl 0;
 
     &__title {
         font-family: $secondary-font-family;
